# libcsolid

./: .gitignore  .gitmodules  CMakeLists.txt  element.c  element.h  material.c  material.h  memory.h  model.c  model.h  node.c  node.h  section.c  section.h
elements/: bar.c  bar.h  common.h
